# esp_giac

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/Adafruit-GFX-Library/: Adafruit_GFX.h  CMakeLists.txt
components/Adafruit_BusIO/: Adafruit_SPIDevice.h  CMakeLists.txt
components/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  CMakeLists.txt
components/arduino-esp32-lite/: CMakeLists.txt  idf_component.yml
components/arduino-esp32-lite/cores/esp32/: Arduino.h  FirmwareMSC.h  HWCDC.cpp  HardwareSerial.h  binary.h  core_version.h  esp32-hal-misc.c  esp32-hal-rmt.c
components/giac/: CMakeLists.txt  giac_extram.lf
components/giac/src/: Cfg.cc  Editeur.cc  Editeur.h  Equation.cc  Equation.h  Graph.cc  Graph.h  Graph3d.cc  Help1.cc  History.cc  History.h  Input.cc  Input.h  Makefile  Makefile.am  Makefile.in  Makefile.win64  Print.cc  Tableur.cc  Tableur.h  Xcas1.cc  Xcas1.h  config.h  gen.h  global.cc  hist.cxx  hist.fl  hist.h  icas.cc  ifactor.cc  khicasio.haux  khicasio.html  khicasio.htoc  khicasio.tex  luabridge.cc  maple.cc  maple.cc.new  maple.cc.old  misc.cc  mkjs  (+9 more)
components/tommath/: CMakeLists.txt
components/tommath/pre_gen/: mpi.c
main/: CMakeLists.txt  fami32_pin.h  main.cpp
